--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "swr": "^2.3.6",
-    "tailwindcss": "4.0.9"
+    "tailwindcss": "4.0.9",
+    "use-debounce": "^10.0.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
