--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "4.0.9",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "^15.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "swr": "^2.3.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.0.9",
     "use-debounce": "^10.0.6",
     "zustand": "^5.0.8"
