--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/postcss": "4.0.9",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
